[tool.poetry]
name = "python-repo-qa"
version = "0.1.0"
description = ""
authors = ["thanglv4 <thanglv4@fpt.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
networkx = "^3.2.1"
matplotlib = "^3.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
